[package]
name = "featherdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "~1.3.3"
bytes = "1.4.0"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
config = "0.13.3"
dashmap = "5.4.0"
derivative = "2.2.0"
futures = "~0.3.15"
futures-util = "~0.3.15"
log = "~0.4.14"
moka = "0.10.0"
parking_lot = "0.12"
ouroboros = "0.15"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.5.4"
rustyline = "11.0.0"
rustyline-derive = "0.8.0"
serde = "~1.0.126"
serde_derive = "~1.0.126"
tempfile = "3"
tokio = { version = "1.26.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
tokio-serde = { version = "~0.8", features = ["bincode"] }
tokio-stream = { version = "~0.1.6", features = ["net"]}
tokio-util = { version = "0.7.7", features = ["codec"] }

[dev-dependencies]
pretty_assertions = "1.3.0"